carousel title & thumb title on mobile fixed

--- a/movizz/src/components/Carousel/Carousel.css
+++ b/movizz/src/components/Carousel/Carousel.css
@@ -240,15 +240,15 @@ button.arrow_forward.packs {
 @media screen and (max-width: 450px) {
     .carousel__title_cover {
         display: table-column-group;
-        width: 78%;
-        max-height: calc(100% - 3rem);
+        /* width: 78%; */
+        /* max-height: calc(100% - 3rem); */
     }
 
-    .carousel__rate_cover {
-        font-size: larger;
-    }
+    /* .carousel__rate_cover {
+        font-size: medium;
+    } */
     
-    .carousel__title_cover h2 {
+    .carousel__rate_cover, .carousel__title_cover h2 {
         font-size: medium;
     }
 
