--- a/movizz/src/components/ListDisplay/Thumbnail/Thumbnail.css
+++ b/movizz/src/components/ListDisplay/Thumbnail/Thumbnail.css
@@ -76,7 +76,7 @@
     
     .thumb__title {
         font-size: 2.2rem;
-        height: fit-content;
+        height: 21px;
     }
 
     .thumb__rate {
